--- a/htmlCss/index.html
+++ b/htmlCss/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link href="./main.css" rel="stylesheet">
 </head>
+
 <body>
-  <div>hello world!</div>
+  <div class="container">
+    <div class="header">
+    </div>
+    <div class="left-menu"></div>
+    <div class="right-menu"></div>
+
+
+  </div>
+
 </body>
+
 </html>
