--- a/htmlCss/index.html
+++ b/htmlCss/index.html
@@ -9,13 +9,14 @@
 
 <body>
   <div class="container">
-    <div class="header">
+
+    <img src="./me.png" class="profile-image" />
+    <div class="profile-content">
+      <div>고라니</div>
+      <div>너 납치된거야...</div>
     </div>
-    <div class="left-menu"></div>
-    <div class="right-menu"></div>
-
-
   </div>
+
 
 </body>
 
