--- a/htmlCss/index.html
+++ b/htmlCss/index.html
@@ -12,8 +12,12 @@
 
     <img src="./me.png" class="profile-image" />
     <div class="profile-content">
-      <div>고라니</div>
-      <div>너 납치된거야...</div>
+      <div style="font-weight: bold;">고라니</div>
+      <div>날짜</div>
+    </div>
+    <div class="content">
+      <h2> 본문 내용 </h2>
+      <div> 너 납치된거야...</div>
     </div>
   </div>
 
